# mlflow_docker

./: Dockerfile  Experiments.ipynb  LICENSE  Load Model.ipynb  Model Registry.ipynb  PyFunc Object.ipynb  README.md  mlflow_load_models.py  mlflow_path_update.sh  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/168761269161650844/: meta.yaml
mlruns/168761269161650844/023368cc85034d6e9a42f8ad2f213866/: meta.yaml
mlruns/168761269161650844/291e9005a6b34a0aa5465436841e5416/: meta.yaml
mlruns/168761269161650844/34ea2c0ecb1e4a1496692df848203c53/: meta.yaml
mlruns/168761269161650844/4d2af73323fc4a78be524fb7bff641c6/: meta.yaml
mlruns/168761269161650844/ef3dc95b5a5a45fa85068f582e8a1e19/: meta.yaml
mlruns/230337050019464183/: meta.yaml
mlruns/230337050019464183/6e3846261db44da5969f064b5fc2e92b/: meta.yaml
mlruns/230337050019464183/7dc831351e374514a11a3c2e4e9ee468/: meta.yaml
mlruns/230337050019464183/92ab239e188440e19c3b8c668e766c41/: meta.yaml
mlruns/230337050019464183/bce5804c3cfc4d27bfc48958b989b1e6/: meta.yaml
mlruns/230337050019464183/c150f49e9c7b4141ba9b2cb6b536fc38/: meta.yaml
mlruns/342552980605951684/: meta.yaml
mlruns/342552980605951684/6198a0f25cce4e57b6c6eec3af184ac8/: meta.yaml
mlruns/342552980605951684/f940d5cc92a3408abdbd67a04592f534/: meta.yaml
mlruns/342552980605951684/fc59467266dc401f8cb1b2f84e0ba0a1/: meta.yaml
mlruns/913514876953091857/: meta.yaml
mlruns/913514876953091857/1e0b9ce636234e139d6d1c9a9c96a941/: meta.yaml
mlruns/913514876953091857/1e69e1707caf4f169412b86a5bfa4231/: meta.yaml
(+92 files in other folders)
