[project]
name = "mlflow-docker"
version = "0.1.0"
description = "MLFlow deployment with Docker"
authors = [
    {name = "Mathew Kenny", email = "mathew.kt@prevalent.ai"},
]

dependencies = [
    "mlflow==2.16.2",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",

]
